--- a/Homework 8.2
+++ b/Homework 8.2
@@ -3,7 +3,7 @@ import java.util.Arrays;
 public class Main {
     public static void main(String[] args) {
         int[] array = {1, 4, 7, 10, 11};
-        System.out.println(Arrays.toString(array));
+        System.out.println(Arrays.toString(array)); //вывод ДО изменения
         int sum = taskTwo(array);
         System.out.println(Arrays.toString(array) + " Сумма первых трёх элементов массива = " + sum);
     }
