--- a/Homework 8.2
+++ b/Homework 8.2
@@ -8,6 +8,9 @@ public class Main {
         System.out.println(Arrays.toString(array) + " Сумма первых трёх элементов массива = " + sum);
     }
 
+/*
+Если элементов массива менее трех, метод предполагает, что недостающие элементы равны 0, и суммирует их
+*/
     static int taskTwo(int... x){
         if (x.length < 3){
             System.out.println("Размер массива не соответствует заданию. Недостающие элементы заменены на 0");
